--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,10 @@ spring.datasource.username=postgres
 spring.datasource.password=6167
 
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
+
+spring.security.user.name=user
+spring.security.user.password=6167
+
+spring.jmx.enabled=true
