feat: completing auth jwt :wrench:

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,16 @@
+server.port=${SERVER_PORT}
 spring.application.name=tokonyadia
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/techiepedia
-spring.datasource.username=postgres
-spring.datasource.password=6167
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.jmx.enabled=true
+
+app.tokonyadiashop.jwt.jwt-secret=${JWT_SECRET}
+app.tokonyadiashop.jwt.app-name=${APP_NAME}
+app.tokonyadiashop.jwt.jwt-expired=${JWT_EXPIRED}
