add rest template for midtrans

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jmx.enabled=true
 app.tokonyadiashop.jwt.jwt-secret=${JWT_SECRET}
 app.tokonyadiashop.jwt.app-name=${APP_NAME}
 app.tokonyadiashop.jwt.jwt-expired=${JWT_EXPIRED}
+
+midtrans.server-key=${MID_KEY}
